fix margin right on mobile

--- a/src/css/CommonStyles.css
+++ b/src/css/CommonStyles.css
@@ -68,9 +68,9 @@ body {
         border: none;
         box-shadow: none;
         padding: 10px;
-        margin: 0;
+        margin: 0 10px;
         height: 100%;
-        width: 100%;
+        width: calc(100% - 20px);
         top: 0;
         left: 0;
         transform: none;
